# SeniorProject

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
projects/VoxelRenderer/: CMakeLists.txt
projects/VoxelRenderer/assets/: Cube.blend
projects/VoxelRenderer/content/: AssignMaterial.compute.glsl  BRDF.compute.glsl  Blit.fragment.glsl  BlitFramebuffer.fragment.glsl  CombineFrames.fragment.glsl  Cube.fbx  DisplayToWindow.frag.glsl  DisplayToWindow.fragment.glsl  DrawTexture.fragment.glsl  ExecuteRayTrace.compute.glsl  FullCast.compute.glsl  MakeCombineMask.fragment.glsl  MakeMipMap.compute.glsl  MakeNoise.compute.glsl  MakeSinusoidalNoise.compute.glsl  MakeWhiteNoise.compute.glsl  PrepareRayTraceFromCamera.compute.glsl  Raymarcher.fragment.glsl  RenderAsynchronous.fragment.glsl  ReprojectionRender.fragment.glsl  ReprojectionRender.vertex.glsl  ResetHitInfo.compute.glsl  ResetVisualInfo.compute.glsl  ScreenQuad.vertex.glsl  ScreenTri.vertex.glsl  UseTextures.fragment.glsl
projects/VoxelRenderer/content/PathTrace/: AfterCast.compute.glsl  BeforeCast.compute.glsl  FullCast.compute.glsl  GroupPixels.compute.glsl  PrepareRayTraceFromCamera.compute.glsl  PrimaryRay.compute.glsl  ResetHitInfo.compute.glsl  ResetPrimaryRayInfo.compute.glsl  ResetVisualInfo.compute.glsl  ShouldCastMask.glsl  ToFramebuffer.fragment.glsl
projects/VoxelRenderer/content/PostProcessing/: ApplyKernelLine.fragment.glsl  Denoise.fragment.glsl  Denoise2.fragment.glsl  ShowAngularSize.fragment.glsl  ShowOther.fragment.glsl  ToneMap.fragment.glsl
projects/VoxelRenderer/content/Reprojection/: Bypass.fragment.glsl  CombineFrames.fragment.glsl  CombineFrames2.fragment.glsl  Denoise.fragment.glsl  MakeCombineMask.fragment.glsl  ReprojectionRender.fragment.glsl  ReprojectionRender.vertex.glsl
projects/VoxelRenderer/content/SVGF/: IntegrateFrame.fragment.glsl  ToFramebuffer.fragment.glsl  WaveletIteration.fragment.glsl  WaveletIterationFirst.fragment.glsl
projects/VoxelRenderer/content/Triangulation/: ConservativeRasterization.fragment.glsl  ConservativeRasterization.vertex.glsl  Phong.fragment.glsl  Phong.vertex.glsl  RayMarching.comp.glsl  Voxel.fragment.glsl  Voxel.vertex.glsl  cube.fbx  nanami_fbx.fbx  steve.mtl
projects/VoxelRenderer/content/VoxelManipulation/: AssignMaterial.compute.glsl  MakeNoise.compute.glsl
projects/VoxelRenderer/content/skybox/: skyboxIndirect.txt  skyboxSettings.txt
projects/VoxelRenderer/content/skybox-night/: nx.hdr  ny.hdr  nz.hdr  px.hdr  pz.hdr  skyboxIndirect.txt  skyboxSettings.txt
projects/VoxelRenderer/content/skybox2/: skyboxIndirect.txt  skyboxSettings.txt
projects/VoxelRenderer/src/: BufferedEvent.h  Camera.cpp  Camera.h  Constants.h  Content.h  Event.h  GraphicsUtils.cpp  GraphicsUtils.h  InputManager.cpp  InputManager.h  Program.cpp  Program.h  ShaderByteBuffer.cpp  ShaderByteBuffer.h  ShaderCompiler.h  ShaderFloatBuffer.cpp  ShaderFloatBuffer.h  ShaderManager.cpp  ShaderManager.h  VoxelRenderer.cpp  VoxelRenderer.h  VoxelRendererProgram.cpp  VoxelRendererProgram.h  VoxelWorld.cpp  VoxelWorld.h  Window.cpp  Window.h  main.cpp
projects/VoxelRenderer/src/gameobjects/: Component.cpp  Component.h  GameObject.cpp  GameObject.h  TransformComponent.cpp  TransformComponent.h
projects/VoxelRenderer/src/graphics/: GraphicsBuffer.h  GraphicsUtility.cpp  GraphicsUtility.h  GraphicsUtils.cpp  GraphicsUtils.h  ShaderByteBuffer.cpp  ShaderByteBuffer.h  ShaderFloatBuffer.cpp  ShaderFloatBuffer.h  ShaderManager.cpp  ShaderManager.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  TextureData.cpp  TextureData.h  TextureManager.cpp  TextureManager.h  TextureType.h
projects/VoxelRenderer/src/input/: InputManager.cpp  InputManager.h
projects/VoxelRenderer/src/materials/: MaterialManager.h  MaterialPaletteSolver.h
projects/VoxelRenderer/src/procgen/: ChunkHierarchyManager.cpp  ChunkHierarchyManager.h  Edge.h  ExampleWorldGenerator.cpp  ExampleWorldGenerator.h  ExaniteWorldGenerator.cpp  ExaniteWorldGenerator.h  Graph.h  GraphManipulator.h  GraphSynthesizer.h  Grid.h  GridStitcher.h  GridSynthesizer.h  Image.h  ImageCombiner.h  ImageManipulator.h  ImageSynthesizer.h  ImageTraverser.h  JustInTimeHorizonGenerator.h  Layer.h  LayerGenerator.h  LayerParser.h  Node.h  OctaveNoiseWorldGenerator.cpp  OctaveNoiseWorldGenerator.h  Point.h  PointSynthesizer.h  PrintUtility.cpp  PrintUtility.h  Room.h  ShapeUtility.h  Space.h  SpaceSynthesizer.h  TextureData.cpp  TextureData.h  TextureDataCombiner.h  TextureDataManipulator.h  TextureDataSynthesizer.cpp  TextureDataSynthesizer.h  TextureDataTraverser.h  (+11 more)
projects/VoxelRenderer/src/rendering/: AsynchronousReprojection.cpp  AsynchronousReprojection.h  CameraRenderCommand.h  Framebuffer.cpp  Framebuffer.h  PostProcessing.cpp  PostProcessing.h  Renderer.cpp  Renderer.h  SVGF.cpp  SVGF.h  SceneRenderCommand.h  VoxelChunkRenderCommand.h  VoxelRenderer.cpp  VoxelRenderer.h
projects/VoxelRenderer/src/threading/: CancellationToken.cpp  CancellationToken.h  PendingTasks.h
projects/VoxelRenderer/src/utilities/: Assert.cpp  Assert.h  BufferedEvent.h  ColorUtility.cpp  ColorUtility.h  CountInstances.cpp  CountInstances.h  Event.h  GeometryUtility.cpp  GeometryUtility.h  ImFileBrowser.h  ImGui.h  ImGuiUtility.cpp  ImGuiUtility.h  Log.cpp  Log.h  MeasureElapsedTimeScope.cpp  MeasureElapsedTimeScope.h  Moveable.h  NonCopyable.h  OpenGl.h  PointerUtility.h  Singleton.h  TupleHasher.h  VectorUtility.cpp  VectorUtility.h
projects/VoxelRenderer/src/utility/: Event.h
projects/VoxelRenderer/src/voxelizer/: Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelPreviewer.cpp  ModelPreviewer.h  ModelVoxelizer.cpp  ModelVoxelizer.h  Shader.cpp  Shader.h  mesh.cpp  mesh.h  model.cpp  model.h  shader.cpp  shader.h
projects/VoxelRenderer/src/windowing/: GlfwContext.cpp  GlfwContext.h  Window.cpp  Window.h
projects/VoxelRenderer/src/world/: Camera.cpp  Camera.h  CameraComponent.cpp  CameraComponent.h  Material.cpp  Material.h  MaterialManager.cpp  MaterialManager.h  RaycastHit.h  (+46 more)
(+52 files in other folders)
